--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "5a4d665d",
       "metadata": {
         "id": "5a4d665d",
@@ -84,14 +84,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "07154103",
       "metadata": {
-        "id": "07154103"
+        "id": "07154103",
+        "outputId": "1d6b3c1f-fd89-4ac4-8a9b-9e2779aae520",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "days_till_vacation = 4\n",
+        "number_of_weeks = days_till_vacation // 7\n",
+        "reminder_of_days = days_till_vacation % 7\n",
+        "number_of_weekends_days = number_of_weeks * 2\n",
+        "if reminder_of_days == 6:\n",
+        "    number_of_weekends_days += 1\n",
+        "print(number_of_weekends_days)"
       ]
     },
     {
