--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "07154103",
       "metadata": {
         "id": "07154103",
@@ -140,7 +140,20 @@
       },
       "outputs": [],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "raw_input = input(\"Введите ширину,длину,размер куска :   \")\n",
+        "raw_input_list = raw_input.split(' ')\n",
+        "width = int(raw_input_list[0])\n",
+        "length = int(raw_input_list[1])\n",
+        "desired_pieces = int(raw_input_list[2])\n",
+        "\n",
+        "chocolate_square = width * length\n",
+        "if chocolate_square >= desired_pieces:\n",
+        "    if (desired_pieces % width == 0) or (desired_pieces % length == 0):\n",
+        "        print(\"It is possible to break off\")\n",
+        "    else:\n",
+        "        print(\"It is not possible to break off\")\n",
+        "else:\n",
+        "    print(\"Your chocolate square is too small\")ЕСЬ"
       ]
     },
     {
