--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -133,12 +133,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "70f3324c",
       "metadata": {
-        "id": "70f3324c"
+        "id": "70f3324c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10d734ea-96da-4bb7-9a5c-536dc77965db"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите ширину,длину,размер куска :   3 4 6\n",
+            "It is possible to break off\n"
+          ]
+        }
+      ],
       "source": [
         "raw_input = input(\"Введите ширину,длину,размер куска :   \")\n",
         "raw_input_list = raw_input.split(' ')\n",
@@ -153,7 +166,7 @@
         "    else:\n",
         "        print(\"It is not possible to break off\")\n",
         "else:\n",
-        "    print(\"Your chocolate square is too small\")ЕСЬ"
+        "    print(\"Your chocolate square is too small\")"
       ]
     },
     {
