--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "70f3324c",
       "metadata": {
         "id": "70f3324c",
@@ -190,14 +190,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "8686127c",
       "metadata": {
-        "id": "8686127c"
+        "id": "8686127c",
+        "outputId": "8817e316-6971-4a22-87aa-f34ff06405b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CMXCIX\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "units_symbols = {0: '', 1: 'I', 2: 'II', 3: 'III', 4: 'IV', 5: 'V', 6: 'VI', 7: 'VII', 8: 'VIII', 9: 'IX'}\n",
+        "tens_symbols = {0: '', 1: 'X', 2: 'XX', 3: 'XXX', 4: 'XL', 5: 'L', 6: 'LX', 7: 'LXX', 8: 'LXXX', 9: 'XC'}\n",
+        "hundreds_symbols = {0: '', 1: 'C', 2: 'CC', 3: 'CCC', 4: 'CD', 5: 'D', 6: 'DC', 7: 'DCC', 8: 'DCCC', 9: 'CM'}\n",
+        "thousands_symbols = {0: '', 1: 'M', 2: 'MM', 3: 'MMM', 4: 'MV̄', 5: 'V̄', 6: 'V̄M', 7: 'V̄MM', 8: 'V̄MMM', 9: 'MX̄'}\n",
+        "\n",
+        "x = 999\n",
+        "str(x)\n",
+        "buffer_list = []\n",
+        "for position,symbol in list(enumerate(str(x)[::-1])):\n",
+        "    if position == 0:\n",
+        "        buffer_list.append(units_symbols[int(symbol)])\n",
+        "    elif position == 1:\n",
+        "        buffer_list.append(tens_symbols[int(symbol)])\n",
+        "    elif position == 2:\n",
+        "        buffer_list.append(hundreds_symbols[int(symbol)])\n",
+        "    elif position == 3:\n",
+        "        buffer_list.append(thousands_symbols[int(symbol)])\n",
+        "    else:\n",
+        "        print(\"Неправильно введено число. Больше 9999\")\n",
+        "buffer_list.reverse()\n",
+        "print(''.join(buffer_list))"
       ]
     },
     {
