--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -194,10 +194,10 @@
       "id": "8686127c",
       "metadata": {
         "id": "8686127c",
-        "outputId": "8817e316-6971-4a22-87aa-f34ff06405b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8817e316-6971-4a22-87aa-f34ff06405b9"
       },
       "outputs": [
         {
@@ -254,14 +254,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "74e39179",
       "metadata": {
-        "id": "74e39179"
+        "id": "74e39179",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c39c93b-db8c-4b56-e9a2-12322087acbd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите число для проверки: 5 \n",
+            "Число 5  является корректным положительным вещественным числом\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def is_positive_float(input_str):\n",
+        "    # Убираем пробелы по краям\n",
+        "    input_str = input_str.strip()\n",
+        "\n",
+        "    # Проверяем на пустую строку\n",
+        "    if not input_str:\n",
+        "        return False\n",
+        "\n",
+        "    # Проверяем наличие знака минус\n",
+        "    if '-' in input_str:\n",
+        "        return False\n",
+        "\n",
+        "    # Проверяем количество десятичных разделителей\n",
+        "    dot_count = 0\n",
+        "    for char in input_str:\n",
+        "        if char == '.':\n",
+        "            dot_count += 1\n",
+        "        if dot_count > 1:\n",
+        "            return False\n",
+        "\n",
+        "    # Проверяем наличие цифр\n",
+        "    has_digit = False\n",
+        "    for char in input_str:\n",
+        "        if char.isdigit():\n",
+        "            has_digit = True\n",
+        "    if not has_digit:\n",
+        "        return False\n",
+        "\n",
+        "    # Проверяем каждый символ на допустимость\n",
+        "    for char in input_str:\n",
+        "        if not (char.isdigit() or char == '.'):\n",
+        "            return False\n",
+        "\n",
+        "    return True\n",
+        "\n",
+        "\n",
+        "# Ввод тестового числа от пользователя\n",
+        "test_number = input(\"Введите число для проверки: \")\n",
+        "\n",
+        "# Проверка введенного числа\n",
+        "if is_positive_float(test_number):\n",
+        "    print(f\"Число {test_number} является корректным положительным вещественным числом\")\n",
+        "else:\n",
+        "    print(f\"Число {test_number} НЕ является корректным положительным вещественным числом\")\n",
+        "\n"
       ]
     }
   ],
