--- a/homework_02/homework_02.ipynb
+++ b/homework_02/homework_02.ipynb
@@ -33,11 +33,11 @@
       "execution_count": 1,
       "id": "344e919f",
       "metadata": {
-        "id": "344e919f",
-        "outputId": "f743c187-54f6-4689-f0aa-b1552ed5ec7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "344e919f",
+        "outputId": "f743c187-54f6-4689-f0aa-b1552ed5ec7d"
       },
       "outputs": [
         {
@@ -97,14 +97,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "3a29082d",
       "metadata": {
-        "id": "3a29082d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3a29082d",
+        "outputId": "3e8a2b6b-57af-4c6a-9866-2afff6f44537"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите количество необходимых мест: 2\n",
+            "Места найдены в ряду 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def find_seats(cinema, required_seats):\n",
+        "    for row_index, row in enumerate(cinema):\n",
+        "        for i in range(len(row) - required_seats + 1):\n",
+        "            if all(seat == 0 for seat in row[i:i + required_seats]):\n",
+        "                return row_index\n",
+        "    return False\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    cinema_layout = [\n",
+        "        [0, 1, 1, 0],\n",
+        "        [1, 0, 0, 0],\n",
+        "        [0, 1, 0, 0]]\n",
+        "\n",
+        "    try:\n",
+        "        seats_needed = int(input(\"Введите количество необходимых мест: \"))\n",
+        "\n",
+        "        if seats_needed <= 0:\n",
+        "            print(\"Количество мест должно быть положительным числом\")\n",
+        "            return\n",
+        "\n",
+        "        result = find_seats(cinema_layout, seats_needed)\n",
+        "\n",
+        "        if result is not False:\n",
+        "            print(f\"Места найдены в ряду {result}\")\n",
+        "        else:\n",
+        "            print(\"False\")\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"Ошибка: введите целое число\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ]
     },
     {
@@ -129,14 +174,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "e0d30ec2",
       "metadata": {
-        "id": "e0d30ec2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e0d30ec2",
+        "outputId": "e35d5990-b204-4217-8fbc-dc7c3c11b318"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите строку для кодирования: asssdddsssddd\n",
+            "Исходная строка: asssdddsssddd\n",
+            "Закодированная строка: 1a3s3d3s3d\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def rle_encode(input_string):\n",
+        "    if not input_string:\n",
+        "        return \"\"\n",
+        "\n",
+        "    encoded_string = \"\"\n",
+        "    current_char = input_string[0]\n",
+        "    count = 1\n",
+        "\n",
+        "    for char in input_string[1:]:\n",
+        "        if char == current_char:\n",
+        "            count += 1\n",
+        "        else:\n",
+        "            encoded_string += str(count) + current_char\n",
+        "            current_char = char\n",
+        "            count = 1\n",
+        "\n",
+        "    encoded_string += str(count) + current_char\n",
+        "\n",
+        "    return encoded_string\n",
+        "\n",
+        "def main():\n",
+        "    try:\n",
+        "\n",
+        "        user_input = input(\"Введите строку для кодирования: \")\n",
+        "\n",
+        "        if not user_input:\n",
+        "            print(\"Строка не должна быть пустой\")\n",
+        "            return\n",
+        "\n",
+        "        result = rle_encode(user_input)\n",
+        "\n",
+        "        print(f\"Исходная строка: {user_input}\")\n",
+        "        print(f\"Закодированная строка: {result}\")\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Произошла ошибка: {str(e)}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "\n"
       ]
     },
     {
