--- a/homework_02/homework_02.ipynb
+++ b/homework_02/homework_02.ipynb
@@ -278,14 +278,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "6a075d20",
       "metadata": {
-        "id": "6a075d20"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6a075d20",
+        "outputId": "b6f4c4cb-c814-4ace-b0fd-98efe2e900d4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите текст для шифрования: Python is great!\n",
+            "Введите ключ (число от 0 до 25): 5\n",
+            "Исходный текст: Python is great!\n",
+            "Зашифрованный текст: Udymts nx lwjfy!\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def caesar_cipher(text, key):\n",
+        "    if not (0 <= key <= 25):\n",
+        "        raise ValueError(\"Ключ должен быть числом от 0 до 25\")\n",
+        "\n",
+        "    result = []\n",
+        "\n",
+        "    for char in text:\n",
+        "        if 'A' <= char <= 'Z':\n",
+        "            new_char = chr((ord(char) - ord('A') + key) % 26 + ord('A'))\n",
+        "            result.append(new_char)\n",
+        "        elif 'a' <= char <= 'z':\n",
+        "            new_char = chr((ord(char) - ord('a') + key) % 26 + ord('a'))\n",
+        "            result.append(new_char)\n",
+        "        else:\n",
+        "            result.append(char)\n",
+        "\n",
+        "    return ''.join(result)\n",
+        "\n",
+        "def main():\n",
+        "    try:\n",
+        "        text = input(\"Введите текст для шифрования: \")\n",
+        "\n",
+        "        key = int(input(\"Введите ключ (число от 0 до 25): \"))\n",
+        "\n",
+        "        if not (0 <= key <= 25):\n",
+        "            print(\"Ошибка: ключ должен быть числом от 0 до 25\")\n",
+        "            return\n",
+        "\n",
+        "        encrypted_text = caesar_cipher(text, key)\n",
+        "\n",
+        "        print(f\"Исходный текст: {text}\")\n",
+        "        print(f\"Зашифрованный текст: {encrypted_text}\")\n",
+        "\n",
+        "    except ValueError as e:\n",
+        "        print(f\"Ошибка: {str(e)}\")\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ]
     },
     {
