--- a/homework_02/homework_02.ipynb
+++ b/homework_02/homework_02.ipynb
@@ -395,15 +395,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "196f6ff4",
       "metadata": {
-        "id": "196f6ff4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "196f6ff4",
+        "outputId": "fe7f9485-5fde-4e40-be02-740084b6bea1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите данные в формате: 'предмет фамилия оценка'\n",
+            "Для завершения ввода введите пустую строку\n",
+            ">>> Математика Иванов  5 Математика Иванов  4 Литература Иванов  3 Математика Петров  5 Литература Сидоров 3 Литература Петров  5 Литература Иванов  4 Математика Сидоров 3 Математика Петров  5\n",
+            "Ошибка ввода. Пожалуйста, введите данные в правильном формате\n",
+            ">>> Математика Иванов  5 Математика Иванов  4 Литература Иванов  3 Математика Петров  5 Литература Сидоров 3 Литература Петров  5 Литература Иванов  4 Математика Сидоров 3 Математика Петров  5\n",
+            "Ошибка ввода. Пожалуйста, введите данные в правильном формате\n",
+            ">>> Математика Иванов  5 Математика Иванов  4  Математика Петров  5 Математика Сидоров 3 Математика Петров  5\n",
+            "Ошибка ввода. Пожалуйста, введите данные в правильном формате\n",
+            ">>> Математика Иванов  5\n",
+            ">>> Математика Иванов  4\n",
+            ">>> Литература Иванов  3\n",
+            ">>> Математика Петров  5\n",
+            ">>> Литература Сидоров 3\n",
+            ">>> Литература Петров  5\n",
+            ">>> Литература Иванов  4\n",
+            ">>> Математика Сидоров 3\n",
+            ">>> Математика Петров  5\n",
+            ">>> \n",
+            "\n",
+            "Литература\n",
+            "Иванов 3 4\n",
+            "Петров 5\n",
+            "Сидоров 3\n",
+            "\n",
+            "Математика\n",
+            "Иванов 5 4\n",
+            "Петров 5 5\n",
+            "Сидоров 3\n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def process_grades():\n",
+        "    gradebook = {}\n",
+        "\n",
+        "    print(\"Введите данные в формате: 'предмет фамилия оценка'\")\n",
+        "    print(\"Для завершения ввода введите пустую строку\")\n",
+        "\n",
+        "    while True:\n",
+        "\n",
+        "        input_data = input(\">>> \")\n",
+        "\n",
+        "        if input_data.strip() == \"\":\n",
+        "            break\n",
+        "\n",
+        "        try:\n",
+        "            subject, surname, grade = input_data.split()\n",
+        "            grade = int(grade)\n",
+        "\n",
+        "            if subject not in gradebook:\n",
+        "                gradebook[subject] = {}\n",
+        "\n",
+        "            if surname not in gradebook[subject]:\n",
+        "                gradebook[subject][surname] = []\n",
+        "\n",
+        "            gradebook[subject][surname].append(grade)\n",
+        "\n",
+        "        except ValueError:\n",
+        "            print(\"Ошибка ввода. Пожалуйста, введите данные в правильном формате\")\n",
+        "\n",
+        "    for subject in sorted(gradebook.keys()):\n",
+        "        print(f\"\\n{subject}\")\n",
+        "\n",
+        "        for surname in sorted(gradebook[subject].keys()):\n",
+        "            grades = gradebook[subject][surname]\n",
+        "            print(f\"{surname} {' '.join(map(str, grades))}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    process_grades()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "w8lz73yb21Lr"
+      },
+      "id": "w8lz73yb21Lr",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
