--- a/homework_03/homework_03.ipynb
+++ b/homework_03/homework_03.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "ec0075f5",
       "metadata": {
         "id": "ec0075f5",
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "e7f4e9c8",
       "metadata": {
         "id": "e7f4e9c8",
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "c20728f6",
       "metadata": {
         "id": "c20728f6",
@@ -228,14 +228,150 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "54d1f971",
       "metadata": {
-        "id": "54d1f971"
+        "id": "54d1f971",
+        "outputId": "6dc97495-4df2-42cc-f968-b1d4fa8595db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: Петр\n",
+            "Фамилия: Игорев\n",
+            "Возраст: 18\n",
+            "ID: 01245788\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: игорь\n",
+            "Фамилия: Петров\n",
+            "Возраст: 35\n",
+            "ID: 02587412\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: иван\n",
+            "Фамилия: иванов\n",
+            "Возраст: 60\n",
+            "ID: 36985236\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: 25577\n",
+            "Фамилия: 2222\n",
+            "Возраст: 22\n",
+            "ID: 01266589\n",
+            "Ошибка: Имя должно содержать только буквы\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: енга\n",
+            "Фамилия: прож\n",
+            "Возраст: мррм\n",
+            "ID: 0125\n",
+            "Ошибка: Возраст должен быть числом\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: лоррпп\n",
+            "Фамилия: жждл\n",
+            "Возраст: 22\n",
+            "ID: 012\n",
+            "\n",
+            "Введите данные пользователя:\n",
+            "Имя: \n",
+            "\n",
+            "Список пользователей:\n",
+            "ID        Имя                 Фамилия             Возраст   \n",
+            "------------------------------------------------------------\n",
+            "01245788  Петр                Игорев              18        \n",
+            "02587412  Игорь               Петров              35        \n",
+            "36985236  Иван                Иванов              60        \n",
+            "00000012  Лоррпп              Жждл                22        \n"
+          ]
+        }
+      ],
       "source": [
-        "# ВАШ КОД ЗДЕСЬ"
+        "def validate_name(name):\n",
+        "    if not name[0].isupper():\n",
+        "        name = name[0].upper() + name[1:]\n",
+        "    if not name.replace(' ', '').isalpha():\n",
+        "        raise ValueError(\"Имя должно содержать только буквы\")\n",
+        "    return name\n",
+        "\n",
+        "\n",
+        "def validate_age(age):\n",
+        "    try:\n",
+        "        age = int(age)\n",
+        "        if not (18 <= age <= 60):\n",
+        "            raise ValueError(\"Возраст должен быть от 18 до 60 лет\")\n",
+        "        return age\n",
+        "    except ValueError:\n",
+        "        raise ValueError(\"Возраст должен быть числом\")\n",
+        "\n",
+        "\n",
+        "def validate_id(user_id, existing_ids):\n",
+        "    try:\n",
+        "        user_id = int(user_id)\n",
+        "        if user_id in existing_ids:\n",
+        "            raise ValueError(\"ID уже существует\")\n",
+        "        return f\"{user_id:08d}\"\n",
+        "    except ValueError:\n",
+        "        raise ValueError(\"ID должен быть целым числом\")\n",
+        "\n",
+        "\n",
+        "def print_users_table(users):\n",
+        "    print(f\"{'ID':<10}{'Имя':<20}{'Фамилия':<20}{'Возраст':<10}\")\n",
+        "    print(\"-\" * 60)\n",
+        "    for user_id, data in users.items():\n",
+        "        name, surname, age = data\n",
+        "        print(f\"{user_id:<10}{name:<20}{surname:<20}{age:<10}\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    users = {}\n",
+        "    existing_ids = set()\n",
+        "\n",
+        "    while True:\n",
+        "        print(\"\\nВведите данные пользователя:\")\n",
+        "        name = input(\"Имя: \").strip()\n",
+        "        if not name:\n",
+        "            break\n",
+        "\n",
+        "        surname = input(\"Фамилия: \").strip()\n",
+        "        if not surname:\n",
+        "            break\n",
+        "\n",
+        "        age = input(\"Возраст: \").strip()\n",
+        "        if not age:\n",
+        "            break\n",
+        "\n",
+        "        user_id = input(\"ID: \").strip()\n",
+        "        if not user_id:\n",
+        "            break\n",
+        "\n",
+        "        try:\n",
+        "            name = validate_name(name)\n",
+        "            surname = validate_name(surname)\n",
+        "            age = validate_age(age)\n",
+        "            user_id = validate_id(user_id, existing_ids)\n",
+        "\n",
+        "            users[user_id] = (name, surname, age)\n",
+        "            existing_ids.add(int(user_id))\n",
+        "\n",
+        "        except ValueError as e:\n",
+        "            print(f\"Ошибка: {e}\")\n",
+        "            continue\n",
+        "\n",
+        "    print(\"\\nСписок пользователей:\")\n",
+        "    print_users_table(users)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ]
     }
   ],
